# anonize

./: CHANGELOG.md  LICENSE  README.md  anonize.cabal
src/Text/Anonize/: Animals.hs  Humans.hs
